--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>{{title}}</h1>
+<button (click)="messageService.removeFirstFour()">Clear Top 4 Messages</button>
 <nav>
   <a routerLink="/ci-dashboard">Dashboard</a>
   <a routerLink="/ci-heroes">Heroes</a>
