--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <button (click)="messageService.removeFirstFour()">Clear Top 4 Messages</button>
 <nav>
   <a routerLink="/ci-dashboard">Dashboard</a>
-  <a routerLink="/ci-heroes">Heroes</a>
+  <a routerLink="/ci-heroes">{{heroes.length}} Heroes</a>
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
