--- a/src/app/dashboard/dashboard-component/dashboard.component.html
+++ b/src/app/dashboard/dashboard-component/dashboard.component.html
@@ -1,6 +1,6 @@
 <h3>Top Heroes</h3>
 <div class="grid grid-pad">
-  <a *ngFor="let hero of heroes" class="col-lg-3 col-md-6"
+  <a *ngFor="let hero of heroes" class="col-lg-3 col-md-6 col-sm-12"
       routerLink="/detail/{{hero.id}}">
     <div class="module hero">
       <h4>{{hero.name}}</h4>
