--- a/src/app/heroes/heroes.component/heroes.component.html
+++ b/src/app/heroes/heroes.component/heroes.component.html
@@ -1,3 +1,7 @@
+<nav>
+  <a routerLink="/ci-dashboard">{{localJson.dashboard}}</a>
+  <a routerLink="/ci-heroes">{{heroes.length}} {{localJson.heroes}}</a>
+</nav>
 <h2>My {{heroes.length}} Heroes</h2>
 
 <div>
